--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>Placeholder for new page</p>
+<div class="page-title">
+  <h2>Sample Form</h2>
+</div>
+<div class="page-content">
+  <div class="form-container">
+    <ngx-antd-json-schema-form *ngIf="schema" [schema]="schema" [settings]="settings" (submit)="submit($event)">
+    </ngx-antd-json-schema-form>
+  </div>
+</div>
