--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="page-content">
     <div class="form-container">
-      <ngx-antd-json-schema-form *ngIf="schema" [schema]="schema" [settings]="settings" (submit)="submit($event)">
+      <ngx-antd-json-schema-form *ngIf="schema" [(schema)]="schema" [settings]="settings" (submit)="submit($event)">
       </ngx-antd-json-schema-form>
     </div>
   </div>
