--- a/projects/ngx-antd-json-schema-form/src/lib/components/form-prism/form-prism.component.html
+++ b/projects/ngx-antd-json-schema-form/src/lib/components/form-prism/form-prism.component.html
@@ -1,4 +1,5 @@
 <nz-form-item
+  *ngIf="!config.hidden"
   class="json-form-schema-field {{ config.itemClass ? config.itemClass : settings.itemClass }}"
   [formGroup]="group"
   nz-row
