add form-icon and refactor

--- a/projects/ngx-antd-json-schema-form/src/lib/components/form-prism/form-prism.component.scss
+++ b/projects/ngx-antd-json-schema-form/src/lib/components/form-prism/form-prism.component.scss
@@ -2,6 +2,9 @@
 
 pre.prism-pre {
   white-space: inherit;
+  background: #f5f5f5;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
 }
 
 code.prism-code {
